renaming modules
git-svn-id: https://svn.forgerock.org/openam/branches/ggbridge@4213 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d